# tg-bot-prediction

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  quickstart.md  requirements.txt
bot/: main.py
bot/config/: settings.py
bot/db/: __init__.py  models.py  session.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 001_initial.py
bot/handlers/admin/: __init__.py  create_prediction.py  menu.py
bot/handlers/user/: __init__.py  prediction.py  start.py
bot/keyboards/: __init__.py  admin.py  user.py
bot/middlewares/: __init__.py  admin.py  database.py
bot/scheduler/: __init__.py  jobs.py
bot/services/: __init__.py  broadcast_service.py  prediction_service.py  statistics_service.py  user_service.py
bot/states/: __init__.py  admin.py
